Implemented get.variable/get.defintionOf getter builders

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,13 @@
 {
+  "globals": {
+    "def": true,
+    "get": true,
+    "expect": true
+  },
+
   "env": {
-    "node": true
+    "node": true,
+    "mocha": true
   },
 
   "rules": {
