chore(tests): add karma runner
Add karma-runner which cheks all uis in Firefox browser

--- a/package.json
+++ b/package.json
@@ -32,15 +32,22 @@
     "chai": "~3.3",
     "chai-spies": "~0.7",
     "eslint": "~1.10",
+    "karma": "^0.13.16",
+    "karma-firefox-launcher": "^0.1.7",
     "mocha": "^2.0.0",
     "uglify-js": "^2.6.1"
   },
   "scripts": {
-    "test-mocha-ui": "mocha -r ./spec/config -u index spec/interface_spec.js",
-    "test-global-ui": "mocha -r ./spec/config -u global spec/global_defs_spec.js",
-    "test-getter-ui": "mocha -r ./spec/config -u getter spec/getter_defs_spec.js",
+    "mocha": "NODE_PATH=. mocha -r spec/config -r spec/interface_examples",
+    "test-mocha-ui": "npm run mocha -- -u index.js spec/interface_spec.js",
+    "test-browser-mocha-ui": "karma start -u bdd-lazy-var --src bdd_lazy_var.js --specs spec/interface_spec.js spec/karma.config.js",
+    "test-global-ui": "npm run mocha -- -u global.js spec/global_defs_spec.js",
+    "test-browser-global-ui": "karma start -u bdd-lazy-var/global --src bdd_lazy_var_global.js --specs spec/global_defs_spec.js,spec/interface_spec.js spec/karma.config.js",
+    "test-getter-ui": "npm run mocha -- -u getter.js spec/getter_defs_spec.js",
+    "test-browser-getter-ui": "karma start -u bdd-lazy-var/getter --src bdd_lazy_var_getter.js --specs spec/getter_defs_spec.js,spec/interface_spec.js spec/karma.config.js",
     "test-mocha": "npm run test-mocha-ui && npm run test-global-ui && npm run test-getter-ui",
-    "test": "NODE_PATH=. npm run test-mocha",
+    "test-mocha-in-browser": "npm run test-browser-mocha-ui && npm run test-browser-global-ui && npm run test-browser-getter-ui",
+    "test": "npm run test-mocha && npm run test-mocha-in-browser",
     "build-mocha-ui": "browserify --ignore mocha index.js | uglifyjs > bdd_lazy_var.js",
     "build-global-ui": "browserify --ignore mocha global.js | uglifyjs > bdd_lazy_var_global.js",
     "build-getter-ui": "browserify --ignore mocha getter.js | uglifyjs > bdd_lazy_var_getter.js",
