--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bdd-lazy-var",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "author": "Sergii Stotskyi",
   "description": "Provides \"ui\" for mocha.js which allows to define lazy variables and subjects",
   "license": "MIT",
@@ -33,6 +33,7 @@
     "chai-spies": "~0.7",
     "eslint": "~1.10",
     "karma": "^0.13.16",
+    "karma-mocha": "^0.2.1",
     "karma-firefox-launcher": "^0.1.7",
     "mocha": "^2.0.0",
     "uglify-js": "^2.6.1"
