feat(ui): adds rspec ui which tracks variable definitions same way as rspec does

--- a/package.json
+++ b/package.json
@@ -39,20 +39,23 @@
     "uglify-js": "^2.6.1"
   },
   "scripts": {
-    "mocha": "NODE_PATH=. mocha -r spec/config -r spec/interface_examples",
+    "mocha": "NODE_PATH=. mocha -r spec/config -r spec/interface_examples -r spec/default_suite_tracking_examples",
     "test-mocha-ui": "npm run mocha -- -u index.js spec/interface_spec.js",
     "test-browser-mocha-ui": "karma start -u bdd-lazy-var --src bdd_lazy_var.js --specs spec/interface_spec.js spec/karma.config.js",
     "test-global-ui": "npm run mocha -- -u global.js spec/global_defs_spec.js",
     "test-browser-global-ui": "karma start -u bdd-lazy-var/global --src bdd_lazy_var_global.js --specs spec/global_defs_spec.js,spec/interface_spec.js spec/karma.config.js",
     "test-getter-ui": "npm run mocha -- -u getter.js spec/getter_defs_spec.js",
     "test-browser-getter-ui": "karma start -u bdd-lazy-var/getter --src bdd_lazy_var_getter.js --specs spec/getter_defs_spec.js,spec/interface_spec.js spec/karma.config.js",
-    "test-mocha": "npm run test-mocha-ui && npm run test-global-ui && npm run test-getter-ui",
-    "test-mocha-in-browser": "npm run test-browser-mocha-ui && npm run test-browser-global-ui && npm run test-browser-getter-ui",
+    "test-rspec-ui": "npm run mocha -- -u rspec.js spec/rspec_defs_spec.js",
+    "test-browser-rspec-ui": "karma start -u bdd-lazy-var/rspec --src bdd_lazy_var_rspec.js --specs spec/rspec_defs_spec.js spec/karma.config.js",
+    "test-mocha": "npm run test-mocha-ui && npm run test-global-ui && npm run test-getter-ui && npm run test-rspec-ui",
+    "test-mocha-in-browser": "npm run test-browser-mocha-ui && npm run test-browser-global-ui && npm run test-browser-getter-ui && npm run test-browser-rspec-ui",
     "test": "npm run test-mocha && npm run test-mocha-in-browser",
     "build-mocha-ui": "browserify --ignore mocha index.js | uglifyjs > bdd_lazy_var.js",
     "build-global-ui": "browserify --ignore mocha global.js | uglifyjs > bdd_lazy_var_global.js",
     "build-getter-ui": "browserify --ignore mocha getter.js | uglifyjs > bdd_lazy_var_getter.js",
-    "build-mocha": "npm run build-mocha-ui && npm run build-global-ui && npm run build-getter-ui",
+    "build-rspec-ui": "browserify --ignore mocha rspec.js | uglifyjs > bdd_lazy_var_rspec.js",
+    "build-mocha": "npm run build-mocha-ui && npm run build-global-ui && npm run build-getter-ui && npm run build-rspec-ui",
     "build": "npm run build-mocha"
   },
   "browserify-shim": {
