--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "main": "./index",
   "peerDependencies": {
-    "mocha": "^3.0.0"
+    "mocha": "^3.0.0 || ^2.3.0"
   },
   "devDependencies": {
     "browserify": "10.2.4",
