--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "main": "./index",
   "peerDependencies": {
-    "mocha": "^3.0.0 || ^2.3.0"
+    "mocha": "^4.0.0 || ^3.0.0 || ^2.3.0"
   },
   "devDependencies": {
     "browserify": "^14.4.0",
@@ -35,7 +35,7 @@
     "karma": "^1.7.1",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
-    "mocha": "^3.0.0",
+    "mocha": "^4.0.0",
     "uglify-js": "^2.6.1"
   },
   "scripts": {
