--- a/.eslintrc
+++ b/.eslintrc
@@ -1,203 +1,15 @@
 {
-  "globals": {
-    "def": true,
-    "get": true,
-    "expect": true
-  },
-  "env": {
-    "node": true,
-    "mocha": true
-  },
+  "extends": "airbnb-base",
   "rules": {
-    "comma-dangle": [
-      2,
-      "never"
-    ],
-    "no-cond-assign": [
-      2,
-      "always"
-    ],
-    "no-debugger": 2,
-    "no-console": 1,
-    "no-constant-condition": 2,
-    "no-dupe-args": 2,
-    "no-dupe-keys": 2,
-    "no-duplicate-case": 2,
-    "no-empty": 2,
-    "no-ex-assign": 2,
-    "no-extra-parens": 2,
-    "no-extra-semi": 2,
-    "no-func-assign": 2,
-    "no-irregular-whitespace": 2,
-    "no-negated-in-lhs": 2,
-    "no-obj-calls": 2,
-    "no-sparse-arrays": 2,
-    "no-unreachable": 2,
-    "use-isnan": 2,
-    "valid-typeof": 2,
-    "block-scoped-var": 2,
-    "curly": 2,
-    "dot-notation": [
-      2,
-      {
-        "allowKeywords": true
-      }
-    ],
-    "dot-location": [
-      2,
-      "property"
-    ],
-    "eqeqeq": 2,
-    "no-caller": 2,
-    "no-else-return": 2,
-    "no-labels": 2,
-    "no-eq-null": 2,
-    "no-eval": 2,
-    "no-extra-bind": 2,
-    "no-fallthrough": 2,
-    "no-floating-decimal": 2,
-    "no-implied-eval": 2,
-    "no-lone-blocks": 2,
-    "no-multi-spaces": 2,
-    "no-multi-str": 2,
-    "no-native-reassign": 2,
-    "no-new": 2,
-    "no-redeclare": 2,
-    "no-self-compare": 2,
-    "no-sequences": 2,
-    "no-throw-literal": 2,
-    "no-unused-expressions": 2,
-    "no-with": 2,
-    "radix": 2,
-    "wrap-iife": [
-      2,
-      "inside"
-    ],
-    "strict": 0,
-    "no-catch-shadow": 2,
-    "no-shadow": 1,
-    "no-undef-init": 2,
-    "no-undefined": 2,
-    "no-unused-vars": 2,
-    "no-use-before-define": [
-      2,
-      "nofunc"
-    ],
-    "brace-style": [
-      2,
-      "1tbs"
-    ],
-    "camelcase": [
-      2,
-      {
-        "properties": "always"
-      }
-    ],
-    "comma-spacing": [
-      2,
-      {
-        "before": false,
-        "after": true
-      }
-    ],
-    "comma-style": [
-      2,
-      "last"
-    ],
-    "eol-last": 2,
-    "indent": [
-      2,
-      2,
-      {
-        "SwitchCase": 1
-      }
-    ],
-    "key-spacing": [
-      2,
-      {
-        "beforeColon": false,
-        "afterColon": true
-      }
-    ],
-    "consistent-return": 0,
-    "linebreak-style": 0,
-    "max-nested-callbacks": [
-      2,
-      5
-    ],
-    "new-cap": 2,
-    "new-parens": 2,
-    "no-lonely-if": 2,
-    "no-mixed-spaces-and-tabs": 2,
-    "no-multiple-empty-lines": [
-      1,
-      {
-        "max": 2
-      }
-    ],
-    "no-nested-ternary": 2,
-    "no-new-object": 2,
-    "no-spaced-func": 2,
-    "no-trailing-spaces": 2,
-    "no-underscore-dangle": 0,
-    "no-unneeded-ternary": 2,
-    "operator-linebreak": [
-      2,
-      "after"
-    ],
-    "quotes": [
-      2,
-      "single",
-      "avoid-escape"
-    ],
-    "semi": [
-      2,
-      "always"
-    ],
-    "keyword-spacing": [
-      2
-    ],
-    "space-before-blocks": [
-      2,
-      "always"
-    ],
-    "space-before-function-paren": [
-      2,
-      "never"
-    ],
-    "object-curly-spacing": [
-      2,
-      "always"
-    ],
-    "space-in-parens": [
-      2,
-      "never"
-    ],
-    "space-infix-ops": 2,
-    "space-unary-ops": [
-      1,
-      {
-        "words": true,
-        "nonwords": false
-      }
-    ],
-    "spaced-comment": [
-      2,
-      "always"
-    ],
-    "max-depth": [
-      2,
-      3
-    ],
-    "max-len": [
-      2,
-      120,
-      4
-    ],
-    "max-params": [
-      1,
-      5
-    ],
-    "no-bitwise": 1
+    "no-plusplus": 0,
+    "comma-dangle": 0,
+    "no-underscore-dangle": ["error", { "allowAfterThis": true }],
+    "no-param-reassign": ["error", { "props": false }],
+    "no-mixed-operators": 0,
+    "no-prototype-builtins": 0,
+    "no-multi-assign": 0,
+    "no-confusing-arrow": 0,
+    "no-return-assign": 0,
+    "no-use-before-define": ["error", { "functions": false }]
   }
 }
