--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
     "chai-spies": "~0.7",
-    "eslint": "~1.10",
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.8.0",
     "karma": "^1.7.1",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
@@ -59,6 +61,7 @@
     "build-getter-ui": "DEST_FILE=getter.js SRC_FILE=mocha/bdd_getter_var rollup -c tools/rollup.umd.js",
     "build-rspec-ui": "DEST_FILE=rspec.js SRC_FILE=mocha/rspec rollup -c tools/rollup.umd.js",
     "build-mocha": "npm run build-mocha-ui && npm run build-global-ui && npm run build-getter-ui && npm run build-rspec-ui",
-    "build": "npm run build-mocha"
+    "build": "npm run build-mocha",
+    "lint": "eslint lib"
   }
 }
