--- a/package.json
+++ b/package.json
@@ -57,10 +57,10 @@
     "test-mocha": "npm run test-mocha-ui && npm run test-global-ui && npm run test-getter-ui && npm run test-rspec-ui",
     "test-mocha-in-browser": "npm run test-browser-mocha-ui && npm run test-browser-global-ui && npm run test-browser-getter-ui && npm run test-browser-rspec-ui",
     "test": "npm run test-mocha && npm run test-mocha-in-browser",
-    "build-mocha-ui": "DEST_FILE=index.js SRC_FILE=mocha/bdd rollup -c tools/rollup.umd.js",
-    "build-global-ui": "DEST_FILE=global.js SRC_FILE=mocha/bdd_global_var rollup -c tools/rollup.umd.js",
-    "build-getter-ui": "DEST_FILE=getter.js SRC_FILE=mocha/bdd_getter_var rollup -c tools/rollup.umd.js",
-    "build-rspec-ui": "DEST_FILE=rspec.js SRC_FILE=mocha/rspec rollup -c tools/rollup.umd.js",
+    "build-mocha-ui": "DEST_FILE=index.js SRC_FILE=bdd rollup -c tools/rollup.umd.js",
+    "build-global-ui": "DEST_FILE=global.js SRC_FILE=bdd_global_var rollup -c tools/rollup.umd.js",
+    "build-getter-ui": "DEST_FILE=getter.js SRC_FILE=bdd_getter_var rollup -c tools/rollup.umd.js",
+    "build-rspec-ui": "DEST_FILE=rspec.js SRC_FILE=rspec rollup -c tools/rollup.umd.js",
     "build-mocha": "npm run build-mocha-ui && npm run build-global-ui && npm run build-getter-ui && npm run build-rspec-ui",
     "build": "npm run build-mocha",
     "lint": "eslint lib"
