--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "no-confusing-arrow": 0,
     "no-return-assign": 0,
     "no-use-before-define": ["error", { "functions": false }],
-    "class-methods-use-this": 0
+    "class-methods-use-this": 0,
+    "import/no-unresolved": 0
   }
 }
