--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "no-return-assign": 0,
     "no-use-before-define": ["error", { "functions": false }],
     "class-methods-use-this": 0,
-    "import/no-unresolved": 0
+    "import/no-extraneous-dependencies": 1,
+    "global-require": 1
   }
 }
