--- a/.eslintrc
+++ b/.eslintrc
@@ -11,8 +11,6 @@
     "no-confusing-arrow": 0,
     "no-return-assign": 0,
     "no-use-before-define": ["error", { "functions": false }],
-    "class-methods-use-this": 0,
-    "import/no-extraneous-dependencies": 1,
-    "global-require": 1
+    "class-methods-use-this": 0
   }
 }
