--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jasmine": "^2.8.0",
     "karma": "^1.7.1",
     "karma-firefox-launcher": "^1.0.1",
+    "karma-jasmine": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^4.0.0",
     "rollup": "^0.53.3",
@@ -48,24 +49,27 @@
   },
   "scripts": {
     "mocha": "NODE_PATH=. mocha -r spec/config -r spec/interface_examples -r spec/default_suite_tracking_examples",
-    "test-mocha-ui": "npm run mocha -- -u index.js spec/interface_spec.js",
-    "test-browser-mocha-ui": "karma start -u bdd-lazy-var --src index.js --specs spec/interface_spec.js spec/karma.config.js",
-    "test-mocha-global": "npm run mocha -- -u global.js spec/global_defs_spec.js",
-    "test-browser-mocha-global": "karma start -u bdd-lazy-var/global --src global.js --specs spec/global_defs_spec.js,spec/interface_spec.js spec/karma.config.js",
-    "test-mocha-getter": "npm run mocha -- -u getter.js spec/getter_defs_spec.js",
-    "test-browser-mocha-getter": "karma start -u bdd-lazy-var/getter --src getter.js --specs spec/getter_defs_spec.js,spec/interface_spec.js spec/karma.config.js",
-    "test-mocha": "npm run test-mocha-ui && npm run test-mocha-global && npm run test-mocha-getter",
-    "test-mocha-in-browser": "npm run test-browser-mocha-ui && npm run test-browser-mocha-global && npm run test-browser-mocha-getter",
-    "test-jasmine-ui": "node tools/jasmine bdd interface_spec.js",
-    "test-jasmine-global": "node tools/jasmine bdd_global_var global_defs_spec.js",
-    "test-jasmine-getter": "node tools/jasmine bdd_getter_var getter_defs_spec.js",
-    "test-jasmine": "npm run test-jasmine-ui && npm run test-jasmine-global && npm run test-jasmine-getter",
-    "test": "npm run test-mocha && npm run test-mocha-in-browser && npm run test-jasmine",
-    "build-mocha-ui": "DEST_FILE=index.js SRC_FILE=bdd rollup -c tools/rollup.umd.js",
-    "build-global-ui": "DEST_FILE=global.js SRC_FILE=bdd_global_var rollup -c tools/rollup.umd.js",
-    "build-getter-ui": "DEST_FILE=getter.js SRC_FILE=bdd_getter_var rollup -c tools/rollup.umd.js",
-    "build-mocha": "npm run build-mocha-ui && npm run build-global-ui && npm run build-getter-ui",
-    "build": "npm run build-mocha",
+    "test.mocha-ui": "npm run mocha -- -u index.js spec/interface_spec.js",
+    "test.mocha-global": "npm run mocha -- -u global.js spec/global_defs_spec.js",
+    "test.mocha-getter": "npm run mocha -- -u getter.js spec/getter_defs_spec.js",
+    "test.mocha": "npm run test.mocha-ui && npm run test.mocha-global && npm run test.mocha-getter",
+    "test.browser-mocha-ui": "karma start -u bdd-lazy-var --src index.js --specs spec/interface_spec.js tools/karma.config.js",
+    "test.browser-mocha-global": "karma start -u bdd-lazy-var/global --src global.js --specs spec/global_defs_spec.js,spec/interface_spec.js tools/karma.config.js",
+    "test.browser-mocha-getter": "karma start -u bdd-lazy-var/getter --src getter.js --specs spec/getter_defs_spec.js,spec/interface_spec.js tools/karma.config.js",
+    "test.mocha-in-browser": "npm run test.browser-mocha-ui && npm run test.browser-mocha-global && npm run test.browser-mocha-getter",
+    "test.jasmine-ui": "node tools/jasmine index.js interface_spec.js",
+    "test.jasmine-global": "node tools/jasmine global.js global_defs_spec.js",
+    "test.jasmine-getter": "node tools/jasmine getter.js getter_defs_spec.js",
+    "test.jasmine": "npm run test.jasmine-ui && npm run test.jasmine-global && npm run test.jasmine-getter",
+    "test.browser-jasmine-ui": "karma start -f jasmine --src index.js --specs spec/interface_spec.js tools/karma.config.js",
+    "test.browser-jasmine-global": "karma start -f jasmine --src global.js --specs spec/global_defs_spec.js,spec/interface_spec.js tools/karma.config.js",
+    "test.browser-jasmine-getter": "karma start -f jasmine --src getter.js --specs spec/getter_defs_spec.js,spec/interface_spec.js tools/karma.config.js",
+    "test.jasmine-in-browser": "npm run test.browser-jasmine-ui && npm run test.browser-jasmine-global && npm run test.browser-jasmine-getter",
+    "test": "npm run test.mocha && npm run test.mocha-in-browser && npm run test.jasmine && npm run test.jasmine-in-browser",
+    "build.ui": "DEST_FILE=index.js SRC_FILE=bdd rollup -c tools/rollup.umd.js",
+    "build.global-ui": "DEST_FILE=global.js SRC_FILE=bdd_global_var rollup -c tools/rollup.umd.js",
+    "build.getter-ui": "DEST_FILE=getter.js SRC_FILE=bdd_getter_var rollup -c tools/rollup.umd.js",
+    "build": "npm run build.ui && npm run build.global-ui && npm run build.getter-ui",
     "lint": "eslint lib"
   }
 }
