--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bdd-lazy-var",
   "version": "1.3.1",
   "author": "Sergii Stotskyi",
-  "description": "Provides \"ui\" for mocha.js which allows to define lazy variables and subjects",
+  "description": "Provides \"ui\" for testing frameworks such as mocha/jasmine which allows to define lazy variables and subjects",
   "license": "MIT",
   "readmeFilename": "README.md",
   "repository": {
@@ -11,6 +11,7 @@
   },
   "keywords": [
     "mocha.js",
+    "jasmine",
     "bdd",
     "lazy",
     "variable",
@@ -25,7 +26,7 @@
   "main": "./index",
   "optionalDependencies": {
     "mocha": "^4.0.0 || ^3.0.0 || ^2.3.0",
-    "jasmine": "^2.0.0"
+    "jasmine-core": "^2.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
