--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - "8.9.1"
 
 before_install:
-  - if [[ `npm -v` = 2* ]]; then npm i -g npm@^5.0.0; fi
+  - if [[ `npm -v` = 2* ]]; then npm i -g npm@3.10.8; fi
 
 before_script:
   - export DISPLAY=:99.0
