--- a/package.json
+++ b/package.json
@@ -37,15 +37,16 @@
     "chai": "^3.5.0",
     "chai-spies": "~0.7",
     "eslint": "^4.14.0",
-    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "jasmine": "^2.8.0",
     "jest": "^22.0.4",
-    "karma": "^1.7.1",
+    "karma": "^2.0.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-jasmine": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^4.0.0",
+    "npm-check": "^5.5.2",
     "rollup": "^0.53.3",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.2.6"
