--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
-    "chai": "^3.5.0",
-    "chai-spies": "~0.7",
+    "chai": "^4.1.2",
+    "chai-spies": "^1.0.0",
     "eslint": "^4.14.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
