chore(rollup): reuses builtin rollup options instead of env vars

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "scripts": {
     "mocha": "NODE_PATH=. mocha -r spec/config -r spec/interface_examples -r spec/default_suite_tracking_examples",
-    "test.mocha-ui": "npm run mocha -- -u index.js spec/interface_spec.js",
+    "test.mocha-ui": "npm run mocha -- -u lib/interface/dialects/bdd.js spec/interface_spec.js",
     "test.mocha-global": "npm run mocha -- -u global.js spec/global_defs_spec.js",
     "test.mocha-getter": "npm run mocha -- -u getter.js spec/getter_defs_spec.js",
     "test.mocha": "npm run test.mocha-ui && npm run test.mocha-global && npm run test.mocha-getter",
@@ -61,7 +61,7 @@
     "test.browser-mocha-global": "karma start -u bdd-lazy-var/global --src global.js --specs spec/global_defs_spec.js,spec/interface_spec.js tools/karma.config.js",
     "test.browser-mocha-getter": "karma start -u bdd-lazy-var/getter --src getter.js --specs spec/getter_defs_spec.js,spec/interface_spec.js tools/karma.config.js",
     "test.mocha-in-browser": "npm run test.browser-mocha-ui && npm run test.browser-mocha-global && npm run test.browser-mocha-getter",
-    "test.jasmine-ui": "node tools/jasmine index.js interface_spec.js",
+    "test.jasmine-ui": "node tools/jasmine lib/interface/dialects/bdd.js interface_spec.js",
     "test.jasmine-global": "node tools/jasmine global.js global_defs_spec.js",
     "test.jasmine-getter": "node tools/jasmine getter.js getter_defs_spec.js",
     "test.jasmine": "npm run test.jasmine-ui && npm run test.jasmine-global && npm run test.jasmine-getter",
@@ -74,9 +74,9 @@
     "test.jest-getter": "jest --findRelatedTests spec/getter_defs_spec.js getter.js",
     "test.jest": "npm run test.jest-ui && npm run test.jest-global && npm run test.jest-getter",
     "test": "npm run test.mocha && npm run test.mocha-in-browser && npm run test.jasmine && npm run test.jasmine-in-browser && npm run test.jest",
-    "build.ui": "DEST_FILE=index.js SRC_FILE=bdd rollup -c tools/rollup.umd.js",
-    "build.global-ui": "DEST_FILE=global.js SRC_FILE=bdd_global_var rollup -c tools/rollup.umd.js",
-    "build.getter-ui": "DEST_FILE=getter.js SRC_FILE=bdd_getter_var rollup -c tools/rollup.umd.js",
+    "build.ui": "rollup -c tools/rollup.umd.js -i lib/interface/dialects/bdd.js -o index.js",
+    "build.global-ui": "rollup -c tools/rollup.umd.js -i lib/interface/dialects/bdd_global_var.js -o global.js",
+    "build.getter-ui": "rollup -c tools/rollup.umd.js -i lib/interface/dialects/bdd_getter_var.js -o getter.js",
     "build": "npm run build.ui && npm run build.global-ui && npm run build.getter-ui",
     "lint": "eslint lib"
   },
