--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "main": "./index",
   "optionalDependencies": {
     "mocha": "^4.0.0 || ^3.0.0 || ^2.3.0",
-    "jasmine-core": "^2.0.0"
+    "jasmine-core": "^2.0.0",
+    "jest": "^20.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -46,7 +47,6 @@
     "karma-jasmine": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^4.0.0",
-    "npm-check": "^5.5.2",
     "rollup": "^0.53.3",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.2.6"
