--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "mocha": "^4.0.0 || ^5.0.0",
     "rollup": "^0.57.0",
     "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-commonjs": "^9.0.0"
+    "rollup-plugin-commonjs": "^9.0.0",
+    "rollup-plugin-inject": "^2.0.0"
   },
   "scripts": {
     "mocha": "NODE_PATH=. mocha -r spec/config spec/*_examples.js spec/shared_behavior_spec.js",
