--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,15 +1,14 @@
-engines:
+version: "2" 
+plugins:
   eslint:
     enabled: true
     checks:
       import/extensions:
         enabled: false
-ratings:
-  paths:
-  - lib/**
-exclude_paths:
+exclude_patterns:
 - spec/**/*
 - tools/**/*
 - index.js
 - global.js
 - getter.js
+- "**/*.d.ts"
