--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
     "chai-spies": "^1.0.0",
     "eslint": "^5.0.0",
