chore(jest): fixes new jsdom & jest integration issue
Ref https://github.com/facebook/jest/issues/6766

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "testMatch": [
       "**/spec/*_spec.js"
     ],
-    "setupTestFrameworkScriptFile": "./tools/jest.setup.js"
+    "setupTestFrameworkScriptFile": "./tools/jest.setup.js",
+    "testURL": "http://localhost"
   }
 }
